@@ -1,3 +1,8 @@
+2007-10-27  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-util.c: (theme_delete): if the parent directory is empty after
+	deleting a theme, delete the parent directory, too
+
 2007-10-26  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-style.c: (cursor_theme_delete_cb), (style_init):
